# flash

./: .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  Cargo.toml  README.md  diesel_port_todo.md  fix_date  httpapi.md  jpg_madness.md  language.md  migrate_test  rustfmt.toml  sync.md  time_language.md  update_master  upgrade
files/: album.html  index.html  test.txt
files/css/: album.css  style.css
files/js/: album.js  main.js  tags.js
migrations/20170511152744_create_files_and_tags/: down.sql  up.sql
migrations/20170514094023_add_tags_table/: down.sql  up.sql
migrations/20170826053211_add_changelogs/: down.sql  up.sql
migrations/20171010141049_add_syncpoints/: down.sql  up.sql
migrations/20171019111855_drop_file_serial/: down.sql  up.sql
migrations/20171102215832_move_affected_id_out_of_changetype/: down.sql  up.sql
migrations/20171119122424_optional_thumbnail/: down.sql  up.sql
migrations/20180203112717_non_optional_timestamp/: down.sql  up.sql
migrations/2019-02-03-172659_non_serial_change_id/: down.sql  up.sql
src/: add_changes.rs  album_handler.rs  byte_source.rs  changelog.rs  date_search.rs  db_fixes.rs  error.rs  exiftool.rs  file_database.rs  file_database_container.rs  file_handler.rs  file_list.rs  file_list_response.rs  file_list_worker.rs  file_request_error.rs  file_request_handlers.rs  file_util.rs  fix_timestamps.rs  foreign_server.rs  fuzzy.rs  main.rs  misc_handlers.rs  persistent_file_list.rs  request_helpers.rs  schema.rs  search.rs  search_handler.rs  settings.rs  sync.rs  sync_handlers.rs  sync_progress.rs  test_macros.rs  util.rs
test/: run_sync_test_server.sh
test/files/: exif1.txt
