[package]
name = "flash"
version = "0.1.0"
authors = ["TheZoq2 <frans.skarman@gmail.com>"]

[dependencies]
iron = "*"
staticfile = "*"
mount = "*"
persistent = "*"
urlencoded = "*"

rand = "*"
glob = "*"
rustc-serialize = "*"
regex = "*"
lazy_static = "*"

image = "*"
immeta = "*"

diesel = { version = "0.11.0", features = ["postgres", "chrono"] }
diesel_codegen = { version = "0.11.0", features = ["postgres"] }
dotenv = "0.8.0"

serde = "1.0.8"
serde_derive = "1.0.8"
serde_json = "1.0.2"

error-chain = "0.10"

[dependencies.chrono]
version = "0.3.*"
features = ["rustc-serialize"]



[dev-dependencies]
assert_matches = "1.1.0"
pretty_assertions = "0.2.0"
